# clr

./: Cargo.toml  README.md  README.txt  foo.txt  rust-toolchain.toml
.github/workflows/: ci.yml
bobblehead/: Cargo.toml  bh.txt
bobblehead/src/: main.rs
bobblehead/tests/: cli.rs
clr/: Cargo.toml
clr/src/: main.rs
clr/tests/: cli.rs
common/: Cargo.toml
common/src/: lib.rs
depsdot/: Cargo.toml
depsdot/src/: loader.rs  main.rs  parser.rs  reader.rs  transformer.rs
depsdot/tests/: cli.rs
gato/: Cargo.toml
gato/src/: main.rs
gato/tests/: cli.rs
rvrs/: Cargo.toml
rvrs/src/: main.rs
rvrs/tests/: cli.rs
src/: main.rs
tests/: cli.rs
toilet/: Cargo.toml  README.txt
toilet/src/: main.rs
