[workspace]
members = ["clr", "rvrs", "gato", "common", "bobblehead", "toilet"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
clap = "4"
emojis = "0.6"
figleter = "0.2.2"
predicates = "3"
pretty_assertions = "1.4"
rodio = "0.19"

common = { path = "common" }
