[package]
name = "clr"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "clr"
path = "src/main.rs"
